--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
     "lint": "run-s lint:*",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "server": "json-server --watch src/json/data.json --port 5000"
   },
   "dependencies": {
     "@vueuse/core": "^13.3.0",
+    "axios": "^1.9.0",
+    "json-server": "^1.0.0-beta.3",
     "motion-v": "^1.1.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
