--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "server": "json-server --watch src/json/data.json --port 5000"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.9",
     "@vueuse/core": "^13.3.0",
     "axios": "^1.9.0",
     "json-server": "^1.0.0-beta.3",
